force-app/main/default/objects/Purchase__c/Purchase__c.object-meta.xml
<CustomObject>
    <description>Order header. Contains general information about the purchase, totals, and is linked to the Account.</description>
    <label>Purchase</label>
    <nameField>
        <displayFormat>PUR-{0000}</displayFormat>
        <label>Purchase Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>