force-app/main/default/objects/Purchase__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Linking a purchase to a specific customer (Account). Used to launch the purchase tool from the customer&apos;s card.</description>
    <inlineHelpText>Select the Account associated with this purchase.</inlineHelpText>
    <label>ClientId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchases</relationshipLabel>
    <relationshipName>Purchases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>