force-app/main/default/objects/Purchase__c/fields/GrandTotal__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal__c</fullName>
    <description>Purchase completion total. Calculated automatically in Apex Trigger (PurchaseLineTrigger) as the lengths of all PurchaseLine__c record categories (Amount * UnitCost).</description>
    <inlineHelpText>Total purchase amount calculated automatically based on purchase lines.</inlineHelpText>
    <label>GrandTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>