force-app/main/default/objects/Purchase__c/fields/TotalItems__c.field-meta.xml
<CustomField>
    <fullName>TotalItems__c</fullName>
    <description>The total number of items n this order. This field is calculated automatically using the Apex Trigger on the PurchaseLine__c object. It cannot be edited manually.</description>
    <label>TotalItems</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>